@@ -710,6 +710,7 @@
     - added "hack_driver_root" to use old MAME/MESS specific -listxml node names
     - disabled "test_frontend" and executable existence check when "no_execution" is set to "1"
     - fixed compilation of non-debug build with NO_ASSERT
+    - avoided some strlen() usage
 
     create_report
     - fixed some clang-tidy warnings
